<resources>
    <string name="app_name">今日计划</string>
    <string name="title_today">今日计划</string>
    <string name="title_tasklist">任务列表</string>
    <string name="title_complete">完成情况</string>
    <string name="title_me">我的</string>
    <string name="content_main_jinri">今日必做</string>
    <string name="content_main_yicixing">一次性任务</string>
    <string name="content_main_yiwanc">已完成</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EasyPlan</string>
    <string name="nav_header_subtitle">EasyPlan@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--activity_login-->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>

    <!--activity_registe-->
    <string name="action_sign_up">注册</string>
    <string name="prompt_password_repeat">请再次输入相同密码</string>

    <string name="invalid_username">不合法的用户名</string>
    <string name="invalid_password">密码位数必须>5</string>

    <!--add_task_view -->
    <string name="addtitle">添加新任务</string>
    <string name="addtaskname">任务名：</string>
    <string name="addtaskcate">任务类别：</string>
    <string name="addtaskcate1">无类别</string>
    <string name="addtaskdeadline">到期时间：</string>
    <string name="addtasktype">完成类型：</string>
    <string name="radio1">一次性</string>
    <string name="radio2">固定循环</string>
    <string name="radio3">艾宾浩斯</string>
    <string name="addtaskok">确定</string>
    <string name="addtaskxun">循环周期天数：</string>
</resources>
