<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:orderInCategory="0"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_tasklist"
        android:orderInCategory="1"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_tasklist" />

    <item
        android:id="@+id/navigation_complete"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:orderInCategory="2"
        android:title="@string/title_complete" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="3"
        android:title="@string/title_me" />
</menu>
